fixing broken page on mobile

--- a/client/css/App.css
+++ b/client/css/App.css
@@ -33,12 +33,25 @@ body {
   }
 }
 
-
 .scene-wrapper {
-  padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media (width: 375px) {
+  .scene-wrapper {
+    margin-top: 30px;
+  }
+  .back {
+    margin-top: 70px!important;
+  }
+}
+
+@media (max-height: 812px) {
+    .scene-wrapper .back {
+        margin-top: 20px;
+    }
 }
 
 .avatar {
@@ -59,7 +72,7 @@ body {
   margin-top: 1.5rem;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   animation: fadeIn 0.5s ease-in-out;
-  width: 392px;
+  width: 330px;
   height: 227px;
 }
 
@@ -83,9 +96,9 @@ body {
 }
 
 .page-title {
-  position: absolute;
-  top: 2.8%;
+  margin-bottom: 20px;
 }
+
 
 .control-button {
   margin-top: 1.5rem;
