--- a/client/css/LessonPage.css
+++ b/client/css/LessonPage.css
@@ -226,8 +226,11 @@
 }
 
 @media (max-height: 812px) {
+    .back {
+        margin-top: 70px
+    }
     .level-header { 
-        margin-top: -20px; 
+        margin-top: 120px; 
     }
 }
 
